# AI4Stock

./: .gitignore  README.md  analyze_stock_count.py  backtest_lgbm.py  compress_all_data.py  data_pipeline_v2.py  fetch_daily_akshare.py  fetch_daily_akshare_hist.py  fetch_daily_akshare_sina.py  fetch_data_manager.py  gemini.md  gen_feature.py  pyproject.toml  test_parquet_meta.py  train_lgbm.py
